Changelog
=========


3.0a3
-----

* Implemented server side grouping of listing tables
  [jbaumann]

* added action permission check
  [22.11.2010, mathias.leimgruber]


3.0a2
-----


3.0a1
-----


2.1
---

* tagged from master instead of plone4 compatibility branch
  Your should realy use this one
  [26.10.2010, mathias.leimgruber]


1.0c2
-----

* Changed the minimum pagesize to 1. A small pagesize is necessary for easy
  testing.
  [26.10.2010, jbaumann]

* Fixed select-all: It does now select all items in the tab, not only the visibles.
  Fixed also ordering and duplicity.
  [26.10.2010, jbaumann]

* Using jqueryui is now optional. Use the "jqueryui" extras_require for enabling UI.
  [20.10.2010, jbaumann]

* rebuild tabbedview, so that in only done the tabbedview js stuff,
  when the tabbedview is displayed

* Added maintainer properly in setup.py
  [19.07.2010, jbaumann]


1.0c1
-----

* Issue #146 spinner.gif
  https://extranet.4teamwork.ch/projects/integration-zug.ch-izug/tracker-integration-zug.ch-izug/146/
  [15.10.2010,phgross]

* Issue #912: remove toLoverCase since its not really needed and error-prone
  [11.05.2010, vbaumann]


1.0a5
-----
* timesheet-tabbedview: added some translations
  [30.04.2010, phgross]

* Issue #538 Globaler Reiter Aufgabe: Reiter "Zugewiesene Aufgaben" umbenennen
  [27.04.2010, jinfanger]

1.0a4
-----

* Translations for Poi Tracker - Filter labels (fsprenger)
* Translations for accounting timesheet (fsprenger)
* Issue #505 Weiterleiten einer Aufgabe aus Eingangskorb Mandant 3 nach Mandant 1 geht nicht (jin)
* #20 Bei Poi Tabbed View soll ein neuer Tab "Offene Tickets" hinzugefuegt werden: added translations (pgr)
* Issue #86 Bessere Uebersichtsseite fuer Arbeitsraeume (jin)


1.0a3
-----

* #55 tabbed_view for ftw_Timesheet erstellen
  https://extranet.4teamwork.ch/intranet/10-interne-projekte/teamraum/teamraum-3/tracker-teamraum3/55
  added following features:
  - Filter boxes Functionality (with a accordian view)