@@ -14,4 +14,17 @@ class ITabbedView(Interface):
                                 default=False)
 
 
+class IGridStateStorageKeyGenerator(Interface):
+    """Adapter interface for a multi adapter which provides a key for storing
+    the grid state in dictstorage with. Dependending on the key the same state
+    is stored for more or less tabs (shared).
+    """
 
+    def __init__(context, tabview, request):
+        """The multi-adapter adapts (context, tabview, request).
+        """
+
+    def get_key():
+        """Returns a string which is used for storing the state in the
+        dictstorage.
+        """
